--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "_moduleAliases": {
+    "@services": "services",
+    "@config": "config",
+    "@routes": "routes"
+  },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.17.1",
@@ -25,13 +30,15 @@
     "googleapis": "^46.0.0",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "mongoose": "^5.8.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "typescript": "^3.7.4"
   },
   "devDependencies": {
-    "ts-node-dev": "^1.0.0-pre.44"
+    "ts-node-dev": "^1.0.0-pre.44",
+    "tsconfig-paths": "^3.9.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
