TypeScript conversion almost done!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
           "@routes/*": ["routes/*"],
           "@config/*": ["config/*"],
           "@interfaces/*": ["interfaces/*"],
-          "@models/*": ["models/*"]
+          "@models/*": ["models/*"],
+          "@utils/*": ["utils/*"]
         },
     },
     "include": [
