--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
+        "lib": ["es2017"],
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "target": "es6",
