--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@types/helmet": "0.0.45",
     "@types/mongodb": "^3.3.13",
     "@types/mongoose": "^5.5.34",
+    "@types/multer": "^1.4.2",
+    "@types/multer-s3": "^2.7.7",
     "@types/node": "^12.12.21",
     "@types/passport": "^1.0.2",
     "@types/passport-jwt": "^3.0.3",
+    "aws-sdk": "^2.616.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -32,6 +35,8 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^5.8.2",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "typescript": "^3.7.4"
