--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^5.8.2",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "neon-cli": "^0.3.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "typescript": "^3.7.4"
@@ -49,7 +50,8 @@
     "start": "ts-node src/index.ts",
     "prod": "NODE_ENV=production ts-node src/index.ts",
     "remotedev": "NODE_ENV=DEVTEST ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "neon-build": "neon build"
   },
   "repository": {
     "type": "git",
