--- a/package.json
+++ b/package.json
@@ -10,37 +10,37 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/body-parser": "^1.17.1",
+    "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.2",
-    "@types/express-rate-limit": "^3.3.3",
-    "@types/helmet": "0.0.45",
-    "@types/mongodb": "^3.3.13",
-    "@types/mongoose": "^5.5.34",
+    "@types/express": "^4.17.6",
+    "@types/express-rate-limit": "^5.0.0",
+    "@types/helmet": "^0.0.46",
+    "@types/mongodb": "^3.5.14",
+    "@types/mongoose": "^5.7.14",
     "@types/multer": "^1.4.2",
     "@types/multer-s3": "^2.7.7",
-    "@types/node": "^12.12.21",
-    "@types/passport": "^1.0.2",
+    "@types/node": "^13.13.4",
+    "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
-    "aws-sdk": "^2.616.0",
+    "aws-sdk": "^2.667.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.0.0",
-    "googleapis": "^46.0.0",
-    "helmet": "^3.21.2",
+    "express-rate-limit": "^5.1.3",
+    "googleapis": "^49.0.0",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.8.2",
+    "mongoose": "^5.9.11",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
-    "neon-cli": "^0.3.3",
+    "neon-cli": "^0.4.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "ts-node-dev": "^1.0.0-pre.44",
